WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
192642
REGRESSION (
r237565
): >20 Find in Page highlights in one tile results in a single giant highlight
https://bugs.webkit.org/show_bug.cgi?id=192642
Summary
REGRESSION (r237565): >20 Find in Page highlights in one tile results in a si...
Tim Horton
Reported
2018-12-12 16:04:12 PST
REGRESSION (
r237565
): >20 Find in Page highlights in one tile results in a single giant highlight
Attachments
Patch
(12.70 KB, patch)
2018-12-12 16:04 PST
,
Tim Horton
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2018-12-12 16:04:32 PST
Created
attachment 357185
[details]
Patch
Tim Horton
Comment 2
2018-12-12 16:04:34 PST
<
rdar://problem/46498246
>
Geoffrey Garen
Comment 3
2018-12-12 16:11:03 PST
Comment on
attachment 357185
[details]
Patch r=me
WebKit Commit Bot
Comment 4
2018-12-12 16:49:06 PST
Comment on
attachment 357185
[details]
Patch Clearing flags on attachment: 357185 Committed
r239135
: <
https://trac.webkit.org/changeset/239135
>
WebKit Commit Bot
Comment 5
2018-12-12 16:49:08 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug