REGRESSION (r237565): >20 Find in Page highlights in one tile results in a single giant highlight https://bugs.webkit.org/show_bug.cgi?id=192642 <rdar://problem/46498246>

Reviewed by Geoffrey Garen.

Source/WebCore:

No new tests; adjusted an existing test instead.

* platform/graphics/PathUtilities.cpp:
(WebCore::PathUtilities::pathsWithShrinkWrappedRects):
Instead of uniting when we fail to shrink-wrap, just return the original rects.
This seems like a more reasonable default in most cases.

LayoutTests:

* fast/shrink-wrap/rect-shrink-wrap-expected.html:
* fast/shrink-wrap/rect-shrink-wrap.html:
Add a test case with >20 tiny rects.


Canonical link: https://commits.webkit.org/207214@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@239135 268f45cc-cd09-0410-ab3c-d52691b4dbfc